# apple-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docker/: Dockerfile  compose.yml
src/apple_mcp/: __init__.py  __main__.py  config.py  errors.py  server.py
src/apple_mcp/models/: __init__.py  calendar.py  mail.py  reminders.py
src/apple_mcp/services/: __init__.py  auth.py  calendar.py  mail.py  reminders.py  scope.py
src/apple_mcp/transport/: http.py  stdio.py
tests/: conftest.py  test_calendar.py  test_config.py  test_mail.py  test_reminders.py  test_scope.py  test_server.py
