[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apple-mcp"
version = "2.0.4"
description = "Enterprise MCP server for Apple iCloud: Calendar, Reminders, Mail"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "thetaroot" }
]
keywords = ["mcp", "apple", "icloud", "calendar", "reminders", "mail", "model-context-protocol"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "mcp>=1.0,<2",
    "caldav>=3.2,<4",
    "pyicloud>=2.6,<3",
    "aioimaplib>=1.0,<2",
    "aiosmtplib>=3.0,<4",
    "mail-parser>=3.15,<4",
    "pydantic>=2.0,<3",
    "httpx>=0.27,<1",
    "structlog>=24,<25",
    "python-dotenv>=1.0,<2",
    "starlette>=0.38,<1",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-mock>=3.14,<4",
    "ruff>=0.5,<1",
    "mypy>=1.11,<2",
]

[project.scripts]
apple-mcp = "apple_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_mcp"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
